@@ -100,10 +100,9 @@ extern  "C" {
      * (core-site/core-default.xml).
      * @param port The port on which the server is listening.
      * @param user the user name (this is hadoop domain user). Or NULL is equivelant to hhdfsConnect(host, port)
-     * @param groups the groups (these are hadoop domain groups)
      * @return Returns a handle to the filesystem or NULL on error.
      */
-     hdfsFS hdfsConnectAsUser(const char* host, tPort port, const char *user , const char *groups[], int groups_size );
+     hdfsFS hdfsConnectAsUser(const char* host, tPort port, const char *user);
 
 
     /** 
@@ -124,7 +123,7 @@ extern  "C" {
      * This are the same as hdfsConnectAsUser except that every invocation returns a new FileSystem handle.
      * Applications should call a hdfsDisconnect for every call to hdfsConnectAsUserNewInstance.
      */
-     hdfsFS hdfsConnectAsUserNewInstance(const char* host, tPort port, const char *user , const char *groups[], int groups_size );
+     hdfsFS hdfsConnectAsUserNewInstance(const char* host, tPort port, const char *user );
      hdfsFS hdfsConnectNewInstance(const char* host, tPort port);
      hdfsFS hdfsConnectPath(const char* uri);
 
